--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App1">
-        <activity android:name=".winActivity"></activity>
+        <activity android:name=".settingActivity"></activity>
+        <activity android:name=".winActivity" />
         <activity android:name=".XOActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
